--- a/css/main.css
+++ b/css/main.css
@@ -544,7 +544,7 @@ h6 {
 -----------------------------------------*/
 
 .home {
-    background: url('../images/banner.jpg') center center no-repeat fixed;
+    background: url('../images/banner1.jpg') center center no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -1182,6 +1182,8 @@ h6 {
 .portfolio {
     padding-top: 100px;
     padding-bottom: 70px;
+    background: url('../images/banner1.jpg') center center no-repeat fixed;
+    background-color: rgba(43, 42, 47, .7);
 }
 
 .portfolio .filter-menu {
@@ -1212,14 +1214,6 @@ h6 {
     position: relative;
     overflow: hidden;
     margin-bottom: 30px;
-}
-
-.portfolio .portfolio-content .item:hover img {
-    -webkit-transform: rotate(10deg) scale(1.3);
-    -moz-transform: rotate(10deg) scale(1.3);
-    -o-transform: rotate(10deg) scale(1.3);
-    -ms-transform: rotate(10deg) scale(1.3);
-    transform: rotate(10deg) scale(1.3);
 }
 
 .portfolio .portfolio-content .item:hover .overlay {
